test/asm/macro-arg-recursion.err
error: macro-arg-recursion.asm(6) -> macro-arg-recursion.asm::m(2):
    Invalid character '2' after line continuation
Assembly aborted with 1 error!
